--- a/trunk/GameEditor/GameEditor/Form1.resx
+++ b/trunk/GameEditor/GameEditor/Form1.resx
@@ -195,4 +195,7 @@
   <metadata name="contextMenuStripFrame.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>873, 15</value>
   </metadata>
+  <metadata name="openFileDialogGfxFile.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 43</value>
+  </metadata>
 </root>
