--- a/LevelEditor/LevelEditor/LevelEditor.resx
+++ b/LevelEditor/LevelEditor/LevelEditor.resx
@@ -259,4 +259,7 @@
         ASgDAAFAAwABIAMAAQEBAAEBBgABARYAA///AAIACw==
 </value>
   </data>
+  <metadata name="timerUpdate.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 54</value>
+  </metadata>
 </root>
